// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-1"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-6 MuiGrid-container css-go2vvz-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-8 MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1kgxqm0-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-2 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1uwgr7b-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-9"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-14 MuiGrid-container css-go2vvz-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-16 MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1kgxqm0-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-10 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1uwgr7b-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="makeStyles-container-17"
  >
    <div
      class="MuiGrid-root makeStyles-titleGridContainer-22 MuiGrid-container css-go2vvz-MuiGrid-root"
    >
      <div
        class="MuiGrid-root makeStyles-titleGridItem-24 MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-1kgxqm0-MuiTypography-root"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="makeStyles-descriptionRoot-18 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1uwgr7b-MuiTypography-root"
    >
      Description
    </p>
    <button
      class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
